# SynapsePollModule

./: README.md  setup.cfg
synapse_poll_module/: __init__.py  database.py
synapse_poll_module.egg-info/: PKG-INFO  SOURCES.txt
