[metadata]
name = synapse_poll_module
description = "Synapse module to create polls"
url = https://github.com/Supereuro/SynapsePollModule/
long_description = "See Homepage"

version = 0.0.1

classifiers=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only

[options]
packages = synapse_poll_module
python_requires = >=3.6
install_requires =
  attrs
  twisted

[options.extras_require]
dev =
  # for tests
  matrix-synapse
  tox
  twisted
  aiounittest
  # for type checking
  mypy == 0.910
  # for linting
  black == 21.9b0
  flake8 == 4.0.1
  isort == 5.9.3


[flake8]
# see https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# for error codes. The ones we ignore are:
#  W503: line break before binary operator
#  W504: line break after binary operator
#  E203: whitespace before ':' (which is contrary to pep8?)
#  E501: Line too long (black enforces this for us)
# (this is a subset of those ignored in Synapse)
ignore=W503,W504,E203,E501
